--- a/OBSliderDemo/OBSliderDemoViewController.xib
+++ b/OBSliderDemo/OBSliderDemoViewController.xib
@@ -42,7 +42,7 @@
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUILabel" id="965075812">
+					<object class="IBUILabel" id="318938987">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 20}, {280, 21}}</string>
@@ -53,11 +53,11 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
-						<object class="NSColor" key="IBUITextColor" id="886196357">
+						<object class="NSColor" key="IBUITextColor" id="67867340">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
-						<object class="NSColor" key="IBUIHighlightedColor" id="673746231">
+						<object class="NSColor" key="IBUIHighlightedColor" id="676246621">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -65,7 +65,7 @@
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 					</object>
-					<object class="IBUILabel" id="538342130">
+					<object class="IBUILabel" id="304166119">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 49}, {280, 21}}</string>
@@ -76,13 +76,13 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
-						<reference key="IBUITextColor" ref="886196357"/>
-						<reference key="IBUIHighlightedColor" ref="673746231"/>
+						<reference key="IBUITextColor" ref="67867340"/>
+						<reference key="IBUIHighlightedColor" ref="676246621"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 					</object>
-					<object class="IBUISlider" id="522898309">
+					<object class="IBUISlider" id="813968761">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 108}, {284, 23}}</string>
@@ -91,8 +91,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<float key="IBUIValue">500000</float>
-						<float key="IBUIMaxValue">1000000</float>
+						<float key="IBUIValue">500</float>
+						<float key="IBUIMaxValue">1000</float>
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 460}</string>
@@ -124,7 +124,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">scrubbingSpeedLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="538342130"/>
+						<reference key="destination" ref="304166119"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
@@ -132,7 +132,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">sliderValueLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="965075812"/>
+						<reference key="destination" ref="318938987"/>
 					</object>
 					<int key="connectionID">13</int>
 				</object>
@@ -140,14 +140,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">slider</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="522898309"/>
+						<reference key="destination" ref="813968761"/>
 					</object>
 					<int key="connectionID">14</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">sliderValueDidChange:</string>
-						<reference key="source" ref="522898309"/>
+						<reference key="source" ref="813968761"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">13</int>
 					</object>
@@ -179,25 +179,25 @@
 						<reference key="object" ref="774585933"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="965075812"/>
-							<reference ref="538342130"/>
-							<reference ref="522898309"/>
+							<reference ref="318938987"/>
+							<reference ref="304166119"/>
+							<reference ref="813968761"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="965075812"/>
+						<reference key="object" ref="318938987"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="538342130"/>
+						<reference key="object" ref="304166119"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="522898309"/>
+						<reference key="object" ref="813968761"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 				</object>
@@ -225,7 +225,7 @@
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAABBuAAAwtAAAA</bytes>
 					</object>
-					<string>{{676, 479}, {320, 480}}</string>
+					<string>{{686, 255}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -407,7 +407,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="282702300">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="803603052">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UIResponder.h</string>
 					</object>
@@ -431,7 +431,7 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">UIResponder</string>
 					<string key="superclassName">NSObject</string>
-					<reference key="sourceIdentifier" ref="282702300"/>
+					<reference key="sourceIdentifier" ref="803603052"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UISearchBar</string>
